# Ecommerce_CRUD_MVC_CPP

crud/: CMakeLists.txt  a.out  main.cpp  output.txt
crud/controllers/: CategoryController.cpp  CategoryController.h  ProductController.cpp  ProductController.h
crud/database/: DbConn.cpp  DbConn.h  DbQuery.cpp  DbQuery.h
crud/ecommerce/category/: Category.cpp  Category.h
crud/ecommerce/product/: Product.cpp  Product.h
crud/include/: include.h  node.h
crud/routes/: Routes.cpp  Routes.h
